# lua-imagick

./: .gitignore  CMakeLists.txt  README.md  lua-imagick-1.0.0-1.rockspec  lua-imagick-1.0.1-1.rockspec  lua-imagick-dev-1.rockspec
cmake/: FindLua54.cmake
